<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/qsnone"
        android:layout_width="458dp"
        android:layout_height="102dp"
        android:background="#3f0645"
        android:fontFamily="@font/adamina"
        android:gravity="center"
        android:text="Question#1"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:background="#edbff2">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_margin="6dp"
            android:text="@string/question"
            android:textColor="@color/black"
            android:textSize="28sp"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="58dp" />

        <RadioGroup
        android:id="@+id/activity_main_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/answer1"
            android:textSize="18dp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/answer2"
            android:textSize="18dp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/answer3"
            android:textSize="18dp"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer4"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="-11dp"
            tools:layout_editor_absoluteY="353dp"
            android:textSize="18dp"/>
    </RadioGroup>

        <Button
            android:id="@+id/activity_main_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/submit_answer"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="412dp" />
    </LinearLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="23dp"
        android:text="END QUIZ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qsnone"
        app:layout_constraintVertical_bias="0.924" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="368dp"
        android:backgroundTint="#7319fa"
        android:contentDescription="@string/app_name"
        android:src="@drawable/arrow"

        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qsnone"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>